修改：     .gitignore 	修改：     .idea/.gitignore 	修改：     .idea/vcs.xml 	修改：     .run/Run IDE with Plugin.run.xml 	修改：     build.gradle.kts 	修改：     gradle.properties 	修改：     gradle/wrapper/gradle-wrapper.jar 	修改：     gradle/wrapper/gradle-wrapper.properties 	修改：     gradlew 	修改：     gradlew.bat 	修改：     settings.gradle.kts 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/staticVar/constVar.java 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/staticVar/currentVar.java 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/swingForms/FormsButTheOnlyOne.form 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/swingForms/FormsButTheOnlyOne.java 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/ws/ServerWebSocketServlet.java 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/ws/WebSocketServer.java 	修改：     src/main/java/com/wastingmisaka/dg_lab_warden/ws/WebSocketServerMain.java 	修改：     src/main/resources/APP_SCAN.png 	修改：     src/main/resources/META-INF/plugin.xml 	修改：     src/main/resources/META-INF/pluginIcon.svg 	.idea/.name 	.idea/gradle.xml 	.idea/misc.xml 	.idea/uiDesigner.xml 	src/main/java/com/wastingmisaka/dg_lab_warden/messageUtils/ 	src/main/java/com/wastingmisaka/dg_lab_warden/staticVar/statusVar.java 	src/main/java/com/wastingmisaka/dg_lab_warden/ws/wsThread.java

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,6 +10,7 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-
+        <toolWindow factoryClass="com.wastingmisaka.dg_lab_warden.swingForms.FormsButTheOnlyOne" id="hso!" canCloseContents="true"
+                    anchor="right"></toolWindow>
     </extensions>
 </idea-plugin>
