--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,7 +10,7 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.wastingmisaka.dg_lab_warden.swingForms.FormsButTheOnlyOne" id="hso!" canCloseContents="true"
+        <toolWindow factoryClass="com.wastingmisaka.dg_lab_warden.swingForms.DG_LAB" id="hso!" canCloseContents="true"
                     anchor="right"></toolWindow>
     </extensions>
 </idea-plugin>
